@@ -1,3 +1,8 @@
+2002-03-15  Andrew Zabolotny  <zap@cobra.ru>
+
+	* os2/README.OS2: Update.
+	* os2/Makefile: Likewise.
+
 2002-03-12  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.11.1 released.
